[gd_scene load_steps=3 format=3 uid="uid://brdi0crvgsbl0"]

[ext_resource type="Script" path="res://cards/card_in_deck.gd" id="1"]

[sub_resource type="ImageTexture" id="1"]

[node name="card_in_deck" type="Control"]
custom_minimum_size = Vector2(200, 55)
layout_mode = 3
anchors_preset = 0
offset_right = 283.0
offset_bottom = 50.0
script = ExtResource("1")

[node name="card_name_label" type="Label" parent="."]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
offset_top = 10.0
offset_right = 200.0
offset_bottom = 40.0
text = "test"

[node name="card_draw_button" type="Button" parent="."]
layout_mode = 2
offset_right = 248.0
offset_bottom = 50.0
icon = SubResource("1")
flat = true

[node name="preview_button" type="Button" parent="."]
layout_mode = 2
offset_left = 249.0
offset_top = -1.0
offset_right = 318.0
offset_bottom = 52.0
text = "..."

[connection signal="pressed" from="card_draw_button" to="." method="_on_card_draw_button_pressed"]
[connection signal="pressed" from="preview_button" to="." method="_on_preview_button_pressed"]
